# Quant

./: .env.example  .gitignore  CURSOR_AI_DEVELOPMENT_COMMANDER.md  README.md  _run3_out.txt  docker-compose.yml  pyproject.toml  start.sh
deploy/: Caddyfile
docs/: BACKTEST_VALIDATION.md  DECISIONS.md  DEPLOYMENT.md  DIRECTORY.md  DRYRUN_VALIDATION.md  LIVE_SAFETY_CHECKLIST.md  PHASE_GATE_CHECKLIST.md  PROJECT_STATE.md  PUBLIC_ACCESS.md  TASK_LOG.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  theme.ts
quant_guard/ai/: deepseek.py
quant_guard/api/: app.py  auth.py  user_context.py
quant_guard/backtest/: data_quality.py  funding_fee.py  liquidation.py  report.py
quant_guard/exchange/: models.py  okx_client.py
quant_guard/execution/: engine.py  idempotency.py  (+1 more)
scripts/: README.md  backup_cursor_local.py  download_all_klines.sh  download_binance_data.py  download_data.sh  download_klines.sh  emergency_close_all.py  precheck_dryrun.py  push_cursor_backup.py  restore_cursor_local.py  run_backtest.sh  run_dryrun.sh  run_tests.sh  start.sh  start_web.sh  status.sh  stop.sh  walk_forward_backtest.py
tests/: test_auth.py  test_backtest_report.py  test_control_service.py  test_data_quality.py  test_deepseek.py  test_dryrun_service.py  test_equity_service.py  test_execution_engine.py  test_freqtrade_service.py  test_funding_fee.py  test_liquidation.py  test_live_guard.py  test_okx_client.py  test_risk_manager.py  test_strategy_manager.py  test_trade_analysis.py  test_user_store.py
(+64 files in other folders)
